put background color on body to avoid white flicker

--- a/poks-client/src/style/table-canvas.scss
+++ b/poks-client/src/style/table-canvas.scss
@@ -1,3 +1,3 @@
-#tableCanvas {
+body, #tableCanvas {
   background-color: #35654d;
 }
